--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start:backend": "cd backend && node server.js",
-    "start:frontend": "cd frontend && npm start",
+    "start:frontend": "cd frontend && npm run build && npm start",
     "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "author": "",
