--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "start:backend": "cd backend && node server.js",
-    "start:frontend": "cd frontend && npm run build && npm start",
+    "start:backend": "node server.js",
+    "start:frontend": "npm start --prefix client",
     "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "author": "",
