--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start:backend": "node server.js",
     "start:frontend": "npm start --prefix client",
+    "heroku-postbuild": "npm run build --prefix client",
     "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "author": "",
